--- a/styles.css
+++ b/styles.css
@@ -5,21 +5,34 @@
     scroll-behavior: smooth;
 }
 
+:root{
+    --colorBotones: aquamarine ;
+    --colorFuente: aliceblue;
+}
+
 body{
     background-color: rgba(0, 0, 0, 0.918);
 }
 
-header h1,header form{
+.titulo, header form{
     display: flex;
     justify-content: center;
     margin-top: 30px;
     font-style: oblique;
-    color: aliceblue;
+    color: var(--colorFuente);
+    text-align: center;
+    font-size: 3rem;
+    text-shadow: 0 0 10px #fff, 0 0 20px #fff, 0 0 30px #e60073, 0 0 40px #e60073,
+    0 0 50px #e60073, 0 0 60px #e60073, 0 0 70px #e60073;
+}
+
+.titulo:hover{
+    cursor: pointer;
 }
 
 .sinResult{
     text-align: center;
-    color: aliceblue;
+    color: var(--colorFuente);
 }
 
 .fondo{
@@ -32,7 +45,6 @@ header h1,header form{
     filter: brightness(30%);
     padding: auto;
 }
-
 
 #detalles{
     display: flex;
@@ -47,12 +59,12 @@ header h1,header form{
 
 #info h2,h3,h4{
     margin-bottom: 20px;
-    color: aliceblue;
+    color: var(--colorFuente);
 }
 
 #info p{
     margin-bottom: 20px;
-    color: aquamarine;
+    color: var(--colorBotones);
 }
 
 #video{
@@ -79,7 +91,8 @@ header h1,header form{
     padding: 15px;
     margin: 10px;
     border-radius: 15px;
-    background-color: aquamarine;
+    background-color: var(--colorBotones);
+    cursor: pointer;
 }
 
 #buscar{
@@ -91,7 +104,8 @@ header h1,header form{
 .submit {
     padding: 10px;
     border-radius: 15px;
-    background-color: aquamarine;
+    background-color: var(--colorBotones);
+    cursor: pointer;
 
 }
 #contenedor {
@@ -106,7 +120,7 @@ header h1,header form{
   list-style: none;
   font-size: 1.2rem;
   text-align: center;
-  color: aliceblue;
+  color: var(--colorFuente);
 }
 
 .peliculas:hover {
@@ -119,6 +133,20 @@ header h1,header form{
     border-radius: 10px;
     background-color: azure;
 }
+
+footer{
+    display: flex;
+    justify-content: center;
+    color: var(--colorFuente);
+    
+}
+
+footer a{
+    text-decoration: none;
+    color: var(--colorBotones);
+    margin-left: 60px;
+}
+
 
 @media (max-width: 560px) {
     #contenedor {
@@ -141,5 +169,18 @@ header h1,header form{
         width: 100%;
         height: 100%;
         
+    }
+    
+    footer {
+        display: flex;
+        flex-direction: column;
+        justify-items: center;
+        align-items: center;
+        
+    }
+
+    footer a{
+        margin: 10px 0px;
+
     }
 }
