--- a/styles.css
+++ b/styles.css
@@ -80,9 +80,9 @@ body{
 #btn{
     display: flex;
     justify-content: center;
-    position: sticky;
+    position: fixed;
     z-index: 9999;
-    top: 0;
+    bottom: 0;
     background-color: rgba(0, 0, 0, 0.466);
     -webkit-box-shadow: 0px 9px 16px -6px rgba(57,91,100,1);
     -moz-box-shadow: 0px 9px 16px -6px rgba(57,91,100,1);
@@ -95,6 +95,7 @@ body{
     border-radius: 15px;
     background-color: var(--colorBotones);
     cursor: pointer;
+    width:100%;
 }
 
 #buscar{
@@ -140,6 +141,7 @@ footer{
     display: flex;
     justify-content: center;
     color: var(--colorFuente);
+    margin-bottom:200px;
     
 }
 
